# TestingMethods

./: .gitignore  CMakeLists.txt  README.md
polish_notation/: CMakeLists.txt  Makefile  parsing.c  parsing.h  polish_notation.c  polish_notation.h  stack.c  stack.h
polish_notation/tests/: test_1.check  test_2.check  test_3.check  test_4.check  test_5.check
polish_notation_tests/: CMakeLists.txt  polish_notation_tests.c  polish_notation_tests.h  tests.c
shadow_calculator/: CMakeLists.txt  Makefile  calc_shadow_length.c  segment.h
shadow_calculator/tests/: test_1.check  test_2.check  test_3.check
shadow_calculator_tests/: CMakeLists.txt  shadow_calculator_tests.c  shadow_calculator_tests.h  tests.c
src/: CMakeLists.txt  main.c
